# indieclaw

./: .gitignore  Cargo.toml  cat
adapters/whatsapp/: Cargo.toml  config.toml
adapters/whatsapp/src/: config.rs  main.rs
approach-road/discord/: disc-app.js
approach-road/wa-echo-loop/: app.js  grpcClent.js  package-lock.json  package.json
gateway/: Cargo.toml
gateway-service/: README.md  buildGo.sh  go.mod  go.sum  makefile
gateway-service/cmd/gateway/: main.go
gateway-service/cmd/init_db/: main.go
gateway-service/cmd/orchestrator/: main.go  models.go  storage.go
gateway-service/internal/chat/: models.go
gateway-service/internal/config/: config.go
gateway-service/internal/contracts/: workflow.go
gateway-service/internal/mcp/: client.go  registry.go
gateway-service/internal/memory/: vector.go
gateway-service/internal/orchestrator/: workflow.go
gateway-service/internal/pkg/vision/: fixed_llm.go
gateway-service/internal/service/: gateway.go  ollama_service.go
gateway-service/nginx/: nginx.conf
gateway-service/proto/gateway/v1/: gateway.pb.go  gateway.proto  gateway_grpc.pb.go
gateway/src/: main.rs
gateway/src/capability/: list_directory.rs  manager.rs  mod.rs  read_file.rs  run_command.rs  search_text.rs  tool.rs
gateway/src/chat/: handlers.rs  models.rs
indiechat/: chat.py
indiechat/sdk/: __init__.py  models.py
sdk/: client.py  exceptions.py  rust_ai.js
sdk-r/: Cargo.toml
sdk-r/src/: lib.rs
wa-echo-loop/: app.js  package-lock.json  package.json
